<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpielAuswahl">

        <TextView
            android:id="@+id/waehle_spiel_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waehle_spiel"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <Button
            android:id="@+id/picolo_spiel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picolo_spiel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/waehle_spiel_text" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/drehplatte_an_aus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/drehplatte_an"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/picolo_spiel_button"
            app:layout_constraintStart_toStartOf="@+id/picolo_spiel_button"
            app:layout_constraintTop_toBottomOf="@+id/picolo_spiel_button"
            app:layout_constraintVertical_bias="0.005"
            app:track="@drawable/drehplatte_an_aus_background"
            android:thumb="@drawable/drehplatte_an_aus_thumb"/>

</androidx.constraintlayout.widget.ConstraintLayout>