<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpielerWahl">

    <Button
        android:id="@+id/spieler_hinzufuegen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spieler_hinzufuegen"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/namen_eingeben"
        app:layout_constraintStart_toStartOf="@id/namen_eingeben"
        app:layout_constraintTop_toBottomOf="@id/namen_eingeben"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/namen_eingeben"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:inputType="text"
        android:labelFor="@id/namen_eingeben"
        android:text="@string/spieler_namen_eingeben_hier"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scroll_name"
        app:layout_constraintVertical_bias="0.15"
        android:selectAllOnFocus="true"/>

    <ScrollView
        android:id="@+id/scroll_name"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/namen_anzeigen_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/weiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weiter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spieler_hinzufuegen"
        app:layout_constraintStart_toStartOf="@+id/spieler_hinzufuegen"
        app:layout_constraintTop_toBottomOf="@+id/spieler_hinzufuegen"
        android:textSize="24sp"
        app:layout_constraintVertical_bias="0.2"
        android:visibility="invisible" />

    <Button
        android:id="@+id/spieler_laden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/laden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/spieler_hinzufuegen"
        app:layout_constraintStart_toStartOf="@+id/spieler_hinzufuegen"
        app:layout_constraintTop_toBottomOf="@+id/spieler_hinzufuegen"
        android:textSize="24sp"
        app:layout_constraintVertical_bias="0.2"
        android:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>